# brain-isotopic-distribution

./: CMakeLists.txt  ProjectHome.md  useBRAIN_0.9.4.rar
config/: systemparameters.xml
data/: input3.csv  test_input.csv
src/: CMakeLists.txt  CompoIO.cpp  CompoIO.h  Composition.h  Element.cpp  Element.h  IsotopicConstants.cpp  IsotopicConstants.h  IsotopicDistribution.cpp  IsotopicDistribution.h  NewtonGirardFormulae.cpp  Param.cpp  Peak.h  PeakList.cpp  PeakList.h  PeriodicTable.cpp  VietesFormulae.cpp  VietesFormulae.h
src/test/: CompoIOTest.cpp  NewtonGirardFormulaeTest.cpp  ParamTest.cpp  PeakTest.cpp  VietesFormulaeTest.cpp
trunk/data/: input2.csv
trunk/src/: CMakeLists.txt  CompoIO.cpp  CompoIO.h  Composition.cpp  ConfigLoader.h  IsotopicConstants.cpp  IsotopicConstants.h  IsotopicDistribution.h  NewtonGirardFormulae.cpp  NewtonGirardFormulae.h  Param.h  Peak.cpp  PeriodicTable.h  Polynomials.h  VietesFormulae.h
trunk/src/test/: CompoIOTest.cpp  CompositionTest.cpp  IsotopicDistributionTest.cpp  PeriodicTableTest.cpp
